--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "revents",
   "version": "0.1.0",
@@ -58,5 +59,8 @@
     "redux-devtools-extension": "^2.13.8",
     "source-map-explorer": "^1.5.0",
     "typescript": "^3.3"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/" 
   }
 }
